# cornix

./: Cargo.toml  README.md
.github/assets/: CREDITS.md
crates/cornix/: Cargo.toml
crates/cornix/src/: lib.rs
crates/cornix_app/: Cargo.toml  README.md
crates/cornix_app/src/: lib.rs  main.rs
src/: lib.rs  main.rs
web/: index.html  loading_screen.js  style.css
