[package]
name = "cornix_app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Application for running Cornix app."
keywords = ["science", "multimedia", "games", "gui"]

[dependencies]
bevy = { workspace = true }
lightyear = { workspace = true }

[lints]
workspace = true
